// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en-load-page-error 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <div
      class=""
    />
    <div
      class="js-doc-page page"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Page load error
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`ru-load-page-error 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <div
      class=""
    />
    <div
      class="js-doc-page page"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Ошибка загрузки страницы
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`tr-load-page-error 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <div
      class=""
    />
    <div
      class="js-doc-page page"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Sayfa yüklenirken bir hata oluştu
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;

exports[`uk-load-page-error 1`] = `
<div
  class="html js-doc-html"
>
  <div
    class="pages"
  >
    <div
      class="titleWrapper"
    >
      <h2
        class="title"
      >
        вжух-вжух.pdf
      </h2>
    </div>
    <div
      class=""
    />
    <div
      class="js-doc-page page"
      data-index="1"
    >
      <div
        class="__page-1 fail"
      >
        <span>
          Помилка завантаження сторінки
        </span>
      </div>
    </div>
    <div
      class="sliderButtonsWrapper"
    >
      <div
        class="sliderButtons"
        style="max-width:unset;width:100%"
      />
      <div
        class="sliderButtonsDocsRightMargin"
      />
    </div>
  </div>
</div>
`;
